# python_dev_container

./: .gitignore  Makefile  Readme.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
SampleLib/: pyproject.toml  setup.cfg
SampleLib/libSample/: sample.py
SampleLib/test/: test_sample.py
