[project]
name = "rpglibspell"
version = "0.1.0"
description = "A library for creating and loading spells"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.8"

[tool.poetry]
name = "libsample"
version = "0.1.0"
description = "A sample library"
authors = ["example <user.example@example.org>"]
include = ["libsample"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"